# photons

./: CMakeLists.txt  README.md  bvh.cpp  bvh.h  camera.h  lighting.cpp  lighting.h  main.cpp  material.h  math.h  mesh.cpp  mesh.h  ray.h  scene.cpp  scene.h  shape.cpp  shape.h  stb_image.h  texture.cpp  texture.h  transform.h
report/: photons-feature-report.odt
